<resources>
    <string name="app_name">Wallet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="sign_in">Entrar</string>
    <string name="sign_up">Cadastra-se</string>
    <string name="log_out">Sair</string>
    <string name="extract">Extrato</string>
    <string name="user_name_sample">Android Studio</string>
    <string name="balance_fiat">R$ %.2f</string>
    <string name="balance_btc">BTC %.8f</string>
    <string name="balance_britas">BRITAS %.8f</string>
    <string name="register">Cadastro</string>
    <string name="bid">Compra</string>
    <string name="price">Preco</string>
    <string name="qnt">Quantidade</string>
    <string name="total">Total</string>
    <string name="buy">Comprar</string>
    <string name="ask">Venda</string>
    <string name="sell">Vender</string>

    <string name="btc">BITCOIN</string>
    <string name="fiat">FIAT</string>
    <string name="bts">BRITAS</string>
    <string name="sample_amount">- 100000.00</string>
    <string name="date">26/02/1991</string>
</resources>
